records og edre feilhåndtering i rest-klienter